# 3D_Viewer-C-with-Qt

./: README.md
src/: Makefile
src/source_code/: CMakeLists.txt  s21_viewer.h  scene.cpp  scene.h  viewer.cpp  viewer.h  viewer.ui
src/source_code/QtGifImage/: CMakeLists.txt
